Added typing effect

--- a/templates/chatbot.html
+++ b/templates/chatbot.html
@@ -48,4 +48,6 @@
         </div>
     </div>
 </footer>
+<input type="hidden" id="customerName" value="{{session.customerName}}"/>
+<input type="hidden" id="waiterName" value="{{session.waiterName}}" />
 {% endblock %}
