--- a/static/css/main.css
+++ b/static/css/main.css
@@ -13,9 +13,20 @@
   }
 
 main {
-  height: 92vh;
+  height: 90vh;
 }
 
 main > .container {
   padding: 80px 15px 0;
+}
+
+.typing {
+  animation: blinker 1s linear infinite;
+  color: dimgray;
+}
+
+@keyframes blinker {
+  50% {
+    opacity: 0;
+  }
 }
