--- a/templates/header.html
+++ b/templates/header.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>{{ restaurantName }} | {{ title }}</title>
+    <title>{{ restaurant_name }} | {{ title }}</title>
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/favicon.png') }}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
