--- a/templates/login.html
+++ b/templates/login.html
@@ -1,75 +1,42 @@
 {% extends 'header.html' %}
 
 {% block content %}
-<div class="container-fluid">
-    <div class="container mt-3">
-        <div class="row">
-            <div class="row justify-content-center">
-                <div class="col-auto">
-                    <table class="table table-responsive table-borderless">
-                        <tr>
-                            <td width="10px"><img src="{{ url_for('static', filename='images/favicon.png') }}" height="88px"></img></td>
-                            <td style="white-space:nowrap;" class="align-middle"><h2>{{ restaurantName }} Restaurant</h2></td>
-                            <td width="10px"><img src="{{ url_for('static', filename='images/favicon.png') }}" height="88px"></img></td>
-                        </tr>
-                    </table>
-                </div>
+<div class="container">
+    <div class="row">
+        <div class="row justify-content-center">
+            <div class="col-auto">
+                <table class="table table-responsive table-borderless">
+                    <tr>
+                        <td width="10px"><img src="{{ url_for('static', filename='images/favicon.png') }}" height="88px"></img></td>
+                        <td style="white-space:nowrap;" class="align-middle"><h2>{{ restaurant_name }} Restaurant</h2></td>
+                        <td width="10px"><img src="{{ url_for('static', filename='images/favicon.png') }}" height="88px"></img></td>
+                    </tr>
+                </table>
             </div>
         </div>
-        <form action="/login" method="post">
-            <div class="mb-3 mt-3">
-                <label for="customerName" class="form-label">Customer Name</label>
-                <input type="text" class="form-control" name="customerName" id="customerName" placeholder="Enter customer name" required>
-            </div>
-            <div class="mb-3">
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="yes" id="ofLegalAge" name="ofLegalAge">
-                    <label class="form-check-label" for="ofLegalAge">
-                        Confirm I am at least 21 years of age
-                    </label>
+    </div>
+    <div class="row justify-content-md-center">
+        <div class="col-6">
+            <form action="/login" method="post">
+                <div class="mb-3">
+                    <label for="username" class="form-label">Username</label>
+                    <input type="text" class="form-control" id="username" name="username" placeholder="Enter your username" required>
                 </div>
-            </div>
-            <div class="mb-3">
-                <p class="mb-1">Allergies (select all that apply):</p>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="yes" id="gluten" name="gluten">
-                    <label class="form-check-label" for="gluten">
-                        Gluten
-                    </label>
+                <div class="mb-3">
+                    <label for="password" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="password" name="password" placeholder="Enter your password" required>
                 </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="yes" id="dairy" name="dairy">
-                    <label class="form-check-label" for="dairy">
-                        Dairy
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="yes" id="shellfish" name="shellfish">
-                    <label class="form-check-label" for="shellfish">
-                        Shellfish
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="yes" id="fish" name="fish">
-                    <label class="form-check-label" for="fish">
-                        Fish
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="yes" id="eggs" name="eggs">
-                    <label class="form-check-label" for="eggs">
-                        Eggs
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="yes" id="sulfites" name="sulfites">
-                    <label class="form-check-label" for="sulfites">
-                        Sulfites
-                    </label>
-                </div>
-            </div>
-            <button type="submit" class="btn btn-primary">Talk to us!</button>
-        </form>
+                {% autoescape false %}
+                <p class="error_message mt-3 mb-3">{{ error_message }}</p>
+                {% endautoescape %}
+                <button type="submit" class="btn btn-primary w-100">Login</button>
+            </form>
+        </div>
+    </div>
+    <div class="row">
+        <div class="mt-3 col-12">
+            <p class="text-center text-secondary small">Powered by <a href="https://www.confluent.io/confluent-cloud" target="_blank">Confluent Cloud</a>&copy;</p>
+        </div>
     </div>
 </div>
 {% endblock %}
