--- a/templates/login.html
+++ b/templates/login.html
@@ -27,7 +27,7 @@
                     <input type="password" class="form-control" id="password" name="password" placeholder="Enter your password" required>
                 </div>
                 {% autoescape false %}
-                <p class="error_message mt-3 mb-3">{{ error_message }}</p>
+                <p class="error_message blink mt-3 mb-3">{{ error_message }}</p>
                 {% endautoescape %}
                 <button type="submit" class="btn btn-primary w-100">Login</button>
             </form>
