--- a/templates/chatbot.html
+++ b/templates/chatbot.html
@@ -40,7 +40,7 @@
     <div class="container">
         <div class="row">
             <div class="col-10">
-                <input type="text" class="form-control" name="customer_message" id="customer_message" placeholder="Message..." autocomplete="off" onkeydown="send_message_key();" required>
+                <input type="text" class="form-control" name="customer_message" id="customer_message" placeholder="Message..." autocomplete="off" required>
             </div>
             <div class="col-2">
                 <button class="btn btn-warning" onclick="send_message(0);">Send</button>
