--- a/src/templates/profiles.html
+++ b/src/templates/profiles.html
@@ -4,9 +4,9 @@
 {% endblock %}
 
 {% block content %}
-<div class="container mt-5">
+<div class="container mt-5 text-light">
     <p class="fs-3">Customer Profiles</p>
-    <table class="table table-striped table-hover table-bordered table-responsive mt-2">
+    <table class="table table-striped table-hover table-bordered table-responsive mt-2 table-dark">
         <thead>
             <tr>
                 <th scope="col">Username</th>
