--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -35,5 +35,33 @@ main > .container {
 }
 
 .error_message {
-  color: crimson;
+  color: lightcoral;
+}
+
+.message {
+  border: 0;
+  border-radius: 6px;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-left: 12px;
+  padding-right: 12px;
+  font-size: 18px;
+}
+
+.chatbot {
+  background-color: #e1e6f7;
+  margin-bottom: 24px;
+}
+
+.customer {
+  background-color: #f7f7e1;
+}
+
+p {
+  padding: 0;
+  margin-bottom: 6px;
+}
+
+.nav-link:hover {
+  background-color: #e9ecef;
 }
