--- a/src/templates/chatbot.html
+++ b/src/templates/chatbot.html
@@ -9,16 +9,26 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="{{ url_for('static', filename='images/favicon.png') }}" height="44px"></img>&nbsp;{{ restaurant_name }}</a>
+            <a class="navbar-brand" href="javascript:void(0);"><img src="{{ url_for('static', filename='images/favicon.png') }}" height="44px"></img>&nbsp;{{ restaurant_name }}</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+               <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="javascript:main_menu()">Main Menu</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="javascript:kids_menu()">Kids Menu</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="javascript:my_bill()">My Bill</a>
+                </li>
+            </ul>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Chat Menu</a>
+                        <a class="nav-link dropdown-toggle" href="javascript:void(0)" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">{{session.customer_name}}</a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item disabled" href="#">{{session.customer_name}}</a></li>
                             <li><a class="dropdown-item" href="/logout">Logout</a></li>
                         </ul>
                     </li>
@@ -39,11 +49,11 @@
 <footer class="footer mt-auto py-3 bg-light">
     <div class="container">
         <div class="row">
-            <div class="col-10">
-                <input type="text" class="form-control" name="customer_message" id="customer_message" placeholder="Message..." autocomplete="off" required>
+            <div class="col-11">
+                <input type="text" class="form-control form-control-sm" name="customer_message" id="customer_message" placeholder="Message..." autocomplete="off" required>
             </div>
-            <div class="col-2">
-                <button class="btn btn-warning" onclick="send_message(0);">Send</button>
+            <div class="col-1">
+                <button class="btn btn-warning btn-sm w-100" onclick="send_message(0);">Send</button>
             </div>
         </div>
     </div>
