--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -13,7 +13,7 @@
     {% block header %}{% endblock %}
 </head>
 
-<body class="d-flex flex-column h-100">
+<body class="d-flex flex-column h-100 bg-dark">
     {% block content %}{% endblock %}
 </body>
 
