--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -17,11 +17,11 @@
         <div class="col-6">
             <form action="/login" method="post">
                 <div class="mb-3">
-                    <label for="username" class="form-label">Username</label>
+                    <label for="username" class="form-label text-light">Username</label>
                     <input type="text" class="form-control" id="username" name="username" value="{{ username }}" placeholder="Enter your username" required>
                 </div>
                 <div class="mb-3">
-                    <label for="password" class="form-label">Password</label>
+                    <label for="password" class="form-label text-light">Password</label>
                     <input type="password" class="form-control" id="password" name="password" placeholder="Enter your password" required>
                 </div>
                 {% autoescape false %}
