--- a/src/templates/chatbot.html
+++ b/src/templates/chatbot.html
@@ -48,7 +48,9 @@
                         <a class="nav-link dropdown-toggle" href="javascript:void(0)" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">{{session.customer_name}}</a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="javascript:my_bill()" title="View your current bill">My Bill</a></li>
-                            <li><a class="dropdown-item" href="/logout">Logout</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="/logs" title="View system logs" target="_blank">View Logs</a></li>
+                            <li><a class="dropdown-item" href="/logout" title="Logout">Logout</a></li>
                         </ul>
                     </li>
                 </ul>
