--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -33,6 +33,11 @@
     </div>
     <div class="row">
         <div class="mt-3 col-12">
+            <p class="text-center small text-secondary"><a href="/logs" target="_blank" title="View System Logs">System Logs</a></p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="mt-3 col-12">
             <p class="text-center small text-secondary">Powered by <a href="https://www.confluent.io/confluent-cloud" target="_blank" title="Kora by Confluent Cloud">Confluent Cloud</a>&copy;</p>
         </div>
     </div>
