--- a/src/templates/logs.html
+++ b/src/templates/logs.html
@@ -5,5 +5,7 @@
 {% endblock %}
 
 {% block content %}
-<div id="logs" class="logs text-light"></div>
+<div class="container-fluid">
+    <div class="text-dark" id="logs"></div>
+</div>
 {% endblock %}
