--- a/src/templates/chatbot.html
+++ b/src/templates/chatbot.html
@@ -42,7 +42,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <span class="nav-link" aria-current="page">{{ llm_engine }} Tokens <span class="badge rounded-pill bg-danger" id="total_tokens">N/A</span></span>
+                        <span class="nav-link" aria-current="page">{{ llm_engine }} | Tokens <span class="badge rounded-pill bg-danger" id="total_tokens">N/A</span></span>
                     </li>    
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="javascript:void(0)" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">{{session.customer_name}}</a>
