--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -33,7 +33,7 @@
     </div>
     <div class="row">
         <div class="mt-3 col-12">
-            <p class="text-center small text-secondary"><a href="/logs" target="_blank" title="View System Logs">System Logs</a></p>
+            <p class="text-center small text-secondary"><a href="/logs" target="_blank" title="View System Logs">System Logs</a>&nbsp;|&nbsp;<a href="/data" target="_blank" title="View Backend Data">Backend Data</a></p>
         </div>
     </div>
     <div class="row">
