--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -87,6 +87,16 @@ p {
   font-family: monospace, 'Courier New';
 }
 
+.log-embeddings {
+  color: white;
+  background-color: rgb(12, 0, 248);
+  margin: 6px;
+  padding: 2px;
+  border-radius: 3px;
+  font-size: 14px;
+  font-family: monospace, 'Courier New';
+}
+
 .log-db_provisioning {
   color: black;
   background-color: rgb(255, 239, 149);
